[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "statsd"
version = "4.0.1"
authors = [{name = "James Socol", email = "me@jamessocol.com"}]
license = {text = "MIT"}
description = "A simple statsd client."
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/jsocol/pystatsd"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.ruff]
ignore = [
    "PT008",
    "SIM102",
    "SIM105",
    "SIM117",
    "UP032"
]
select = [
    "B",
    "BLE",
    "C4",
    "DTZ",
    "E",
    "T10",
    "EXE",
    "F",
    "G",
    "ICN",
    "INP",
    "ISC",
    "PIE",
    "PLC",
    "PLE",
    "PLE",
    "PTH",
    "RUF",
    "SIM",
    "UP",
    "W",
]
target-version = "py37"

[tool.ruff.mccabe]
max-complexity = 10

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
